testdata/formatter/failing/incompleteConstsSlightMisalignment.go
package main

const (
A // adsf
B = 10 // asdf
C1 // adf
)